cmake_minimum_required(VERSION 3.10)
#set(VCPKG_TARGET_TRIPLET x64-mingw-static)
project (roguelike-firststab)
#add_subdirectory(cmake)
#print_all_variables()
#set(CMAKE_PREFIX_PATH "C:/msys64/mingw64/bin/vcpkg/installed/x64-mingw-static")
find_package(libtcod CONFIG REQUIRED)
add_definitions(-DSDL_MAIN_HANDLED)
add_subdirectory(tutorial0)
add_subdirectory(tutorial1)
add_subdirectory(tutorial2)
