cmake_minimum_required(VERSION 3.10)
project (roguelike-firststab)
#add_subdirectory(cmake)
#print_all_variables()
find_package(libtcod CONFIG REQUIRED)
add_executable(roguelike-firststab main.cpp)
set(CMAKE_EXE_LINKER_FLAGS " -static")
target_link_libraries(roguelike-firststab PUBLIC libtcod::libtcod)
add_definitions(-DSDL_MAIN_HANDLED)

